--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,12 +1,57 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://xmlns.jcp.org/xml/ns/javaee" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd" id="WebApp_ID" version="4.0">
 	<servlet>
-		<servlet-name>Home</servlet-name>
-		<servlet-class>web.engineering.project.HomeServlet</servlet-class>
-	</servlet>
-	
-	<servlet-mapping>
-		<servlet-name>Home</servlet-name>
-		<url-pattern>/</url-pattern>
-	</servlet-mapping>
+    <description></description>
+    <display-name>index</display-name>
+    <servlet-name>index</servlet-name>
+    <jsp-file>/index.jsp</jsp-file>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>index</servlet-name>
+    <url-pattern>/</url-pattern>
+  </servlet-mapping>
+  
+  <servlet>
+    <description></description>
+    <display-name>newInvoice</display-name>
+    <servlet-name>newInvoice</servlet-name>
+    <jsp-file>/newInvoice.jsp</jsp-file>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>newInvoice</servlet-name>
+    <url-pattern>/new</url-pattern>
+  </servlet-mapping>
+  
+  <servlet>
+    <description></description>
+    <display-name>Inventory</display-name>
+    <servlet-name>Inventory</servlet-name>
+    <jsp-file>/inventory.jsp</jsp-file>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>Inventory</servlet-name>
+    <url-pattern>/inventory</url-pattern>
+  </servlet-mapping>
+  
+  <servlet>
+    <description></description>
+    <display-name>editProfile</display-name>
+    <servlet-name>editProfile</servlet-name>
+    <jsp-file>/editProfile.jsp</jsp-file>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>editProfile</servlet-name>
+    <url-pattern>/profile</url-pattern>
+  </servlet-mapping>
+  
+  <servlet>
+    <description></description>
+    <display-name>previousInvoices</display-name>
+    <servlet-name>previousInvoices</servlet-name>
+    <jsp-file>/previousInvoices.jsp</jsp-file>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>previousInvoices</servlet-name>
+    <url-pattern>/previousInvoices</url-pattern>
+  </servlet-mapping>
 </web-app>
