--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://xmlns.jcp.org/xml/ns/javaee" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd" id="WebApp_ID" version="4.0">
-	<servlet>
-		<servlet-name>Home</servlet-name>
-		<servlet-class>web.engineering.project.HomeServlet</servlet-class>
-	</servlet>
-	
-	<servlet-mapping>
-		<servlet-name>Home</servlet-name>
-		<url-pattern>/</url-pattern>
-	</servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>invoice</display-name>
+    <servlet-name>invoice</servlet-name>
+    <jsp-file>/invoice.jsp</jsp-file>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>invoice</servlet-name>
+    <url-pattern>/invoice</url-pattern>
+  </servlet-mapping>
 </web-app>
