Added JDBC and server support.

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -2,15 +2,6 @@
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://xmlns.jcp.org/xml/ns/javaee" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd" id="WebApp_ID" version="4.0">
   <servlet>
     <description></description>
-    <display-name>invoice</display-name>
-    <servlet-name>invoice</servlet-name>
-    <jsp-file>/invoice.jsp</jsp-file>
-  </servlet>
-  <servlet-mapping>
-    <servlet-name>invoice</servlet-name>
-    <url-pattern>/invoice</url-pattern>
-	<servlet>
-    <description></description>
     <display-name>index</display-name>
     <servlet-name>index</servlet-name>
     <jsp-file>/index.jsp</jsp-file>
@@ -19,7 +10,16 @@
     <servlet-name>index</servlet-name>
     <url-pattern>/</url-pattern>
   </servlet-mapping>
-  
+  <servlet>
+    <description></description>
+    <display-name>invoice</display-name>
+    <servlet-name>invoice</servlet-name>
+    <jsp-file>/invoice.jsp</jsp-file>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>invoice</servlet-name>
+    <url-pattern>/invoice</url-pattern>
+   </servlet-mapping>
   <servlet>
     <description></description>
     <display-name>newInvoice</display-name>
